bug squashing

--- a/src/styles/master.scss
+++ b/src/styles/master.scss
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  height: 200px;
-  width: 300px;
+  height: 100px;
+  width: 120px;
   img {
-    width: 35%;
+    width: 25%;
     border-radius: 100%;
   }
 }
